--- a/XCode/DewertOkin/DewertOkin/Presets-Reminder-Timer/Timer/Timer.storyboard
+++ b/XCode/DewertOkin/DewertOkin/Presets-Reminder-Timer/Timer/Timer.storyboard
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ROG-fO-02j">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="m6n-t1-D7e">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Timer-->
+        <!--Timers-->
         <scene sceneID="fgN-gw-0cQ">
             <objects>
                 <viewController id="ROG-fO-02j" customClass="Timers" customModule="DewertOkin" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,18 +18,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HiN-6w-DYw">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <items>
-                                    <navigationItem title="Timer" id="mIg-Tm-fGN">
-                                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="lRk-9D-hhJ">
-                                            <connections>
-                                                <segue destination="94w-4O-QUa" kind="show" identifier="ToAddTimerView" id="Jyj-5i-Jbp"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Egq-oJ-kuP">
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -39,17 +28,20 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="HiN-6w-DYw" firstAttribute="top" secondItem="D9c-Sd-kNC" secondAttribute="top" id="7qF-YG-Aqd"/>
-                            <constraint firstItem="HiN-6w-DYw" firstAttribute="leading" secondItem="D9c-Sd-kNC" secondAttribute="leading" id="B9f-3H-O9A"/>
-                            <constraint firstItem="Egq-oJ-kuP" firstAttribute="trailing" secondItem="D9c-Sd-kNC" secondAttribute="trailing" id="Ctd-Ti-p2d"/>
-                            <constraint firstItem="Egq-oJ-kuP" firstAttribute="top" secondItem="HiN-6w-DYw" secondAttribute="bottom" id="F8S-pM-eoo"/>
-                            <constraint firstItem="Egq-oJ-kuP" firstAttribute="bottom" secondItem="D9c-Sd-kNC" secondAttribute="bottom" id="MNV-oo-zRA"/>
-                            <constraint firstItem="HiN-6w-DYw" firstAttribute="trailing" secondItem="D9c-Sd-kNC" secondAttribute="trailing" id="uo5-KF-9FH"/>
-                            <constraint firstItem="Egq-oJ-kuP" firstAttribute="leading" secondItem="D9c-Sd-kNC" secondAttribute="leading" id="yJH-c6-fTr"/>
+                            <constraint firstItem="Egq-oJ-kuP" firstAttribute="top" secondItem="D9c-Sd-kNC" secondAttribute="top" id="Lw7-2J-8ml"/>
+                            <constraint firstItem="Egq-oJ-kuP" firstAttribute="bottom" secondItem="D9c-Sd-kNC" secondAttribute="bottom" id="Pte-uY-SOF"/>
+                            <constraint firstAttribute="trailing" secondItem="Egq-oJ-kuP" secondAttribute="trailing" id="iil-DQ-6nP"/>
+                            <constraint firstItem="Egq-oJ-kuP" firstAttribute="leading" secondItem="2E1-Ps-R2l" secondAttribute="leading" id="oE9-yF-bMQ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="D9c-Sd-kNC"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Timer" image="timer_icon" id="xT9-aQ-sjV"/>
+                    <navigationItem key="navigationItem" id="zrS-L5-Yw1">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="xZJ-UA-QCj">
+                            <connections>
+                                <segue destination="94w-4O-QUa" kind="presentation" id="dmU-zI-DxY"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="tableView" destination="Egq-oJ-kuP" id="ARf-Xo-S5b"/>
@@ -57,7 +49,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U2Q-QV-h8f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-237.68115942028987" y="81.521739130434796"/>
+            <point key="canvasLocation" x="700" y="81.409295352323838"/>
         </scene>
         <!--Add Timer-->
         <scene sceneID="aF3-62-lVf">
@@ -123,10 +115,29 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="afO-Gt-d2e" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="iw2-Bw-fjp" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="650.39999999999998" y="81.409295352323838"/>
+            <point key="canvasLocation" x="1589.5999999999999" y="81.409295352323838"/>
+        </scene>
+        <!--Timer-->
+        <scene sceneID="gj4-Fg-Qrk">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="m6n-t1-D7e" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Timer" image="timer_icon" id="xT9-aQ-sjV"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="pHj-WG-saF">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ROG-fO-02j" kind="relationship" relationship="rootViewController" id="8Jf-9M-P7q"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yqZ-nl-BhX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-239.19999999999999" y="81.409295352323838"/>
         </scene>
     </scenes>
     <resources>
-        <image name="timer_icon" width="30" height="30"/>
+        <image name="timer_icon" width="24" height="24"/>
     </resources>
 </document>
